--- a/TODO
+++ b/TODO
@@ -1,9 +1,6 @@
-convert old .fis to new .yaml
-load fis into param server from launch
-finish flc_action
 test flc_action
-test imports across all nodes
+make sure the actions are correct sign/axis
 rework smach to iterate
 integrate GA as action (wrap smach in action)
-introspection
+introspection (for GA)
 
